Move train_ragen_apo to ragen package for better structure

--- a/modal.yaml
+++ b/modal.yaml
@@ -1,8 +1,17 @@
-app:
-  name: ragen-webshop
-  detach: true
+# modal.yaml
+name: ragen-webshop-trainer
+description: "RAGEN + A*PO + Qwen WebShop Training System"
 
-# 挂载当前目录到Modal环境
-mounts:
-  - local_directory: .
-    remote_directory: /root/ragen
+image:
+  base: debian-slim
+  python_version: "3.10"
+
+secrets:
+  - name: my-huggingface-secret
+
+functions:
+  train:
+    gpu: A10G
+    timeout: 86400
+    secrets:
+      - my-huggingface-secret
